[gd_scene load_steps=29 format=3 uid="uid://w7j6d2dkb4nj"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_y1bmt"]
[ext_resource type="Texture2D" uid="uid://duhexjq7eyafa" path="res://Assets/Background/background_game.png" id="2_6paq5"]
[ext_resource type="PackedScene" uid="uid://bct33vel4171k" path="res://Scenes/Game/Progress_Bar.tscn" id="4_bhfxs"]
[ext_resource type="PackedScene" uid="uid://dgpjbpq0305dx" path="res://Scenes/Game/Game_Over.tscn" id="5_b0imn"]
[ext_resource type="Texture2D" uid="uid://c7tan1wa0bfhj" path="res://Assets/Buttons/Game_buttons/trash_button_normal.png" id="6_0o4qm"]
[ext_resource type="PackedScene" uid="uid://df1j1s2aa4kir" path="res://Scenes/Help/Help.tscn" id="6_1bbwq"]
[ext_resource type="Theme" uid="uid://bo63kkmto5g8t" path="res://Themes/Empty_button.tres" id="6_7oot7"]
[ext_resource type="Texture2D" uid="uid://vwjnuq2bmhk3" path="res://Assets/Buttons/Game_buttons/trash_button_pressed.png" id="7_ls11b"]
[ext_resource type="FontFile" uid="uid://lcesxi7ufvqq" path="res://Assets/Font/Jaro-font/static/Jaro-Regular.ttf" id="8_jx51j"]
[ext_resource type="Texture2D" uid="uid://bc4gfaba7w7y5" path="res://Assets/Buttons/Game_buttons/reroll_button_normal.png" id="8_v2frp"]
[ext_resource type="Texture2D" uid="uid://cjovv0jxdiq76" path="res://Assets/Buttons/Game_buttons/reroll_button_pressed.png" id="9_7k8pm"]
[ext_resource type="Texture2D" uid="uid://dlxuj0krvxm6t" path="res://Assets/Buttons/Game_buttons/back_button_normal.png" id="10_kqrni"]
[ext_resource type="Texture2D" uid="uid://c7wwdalx2hd86" path="res://Assets/Buttons/Game_buttons/rotate_button_normal.png" id="10_n3470"]
[ext_resource type="Texture2D" uid="uid://46b45yd1xkth" path="res://Assets/Buttons/Game_buttons/rotate_button_pressed.png" id="11_ccbw1"]
[ext_resource type="Texture2D" uid="uid://b3ag2tcjcos13" path="res://Assets/Buttons/Game_buttons/back_button_pressed.png" id="11_gem6p"]
[ext_resource type="Texture2D" uid="uid://0bstxxpah5pm" path="res://Assets/Buttons/Game_buttons/help_button_normal.png" id="12_3kwa6"]
[ext_resource type="Texture2D" uid="uid://do7wrn7gjnee7" path="res://Assets/Buttons/Game_buttons/help_button_pressed.png" id="13_orq1o"]
[ext_resource type="PackedScene" uid="uid://c6xbu1atc0fjc" path="res://Scenes/Game/Options.tscn" id="13_ykqh5"]
[ext_resource type="Texture2D" uid="uid://dcsuyo5e544h7" path="res://Assets/Buttons/Game_buttons/param_button_normal.png" id="17_lt0mf"]
[ext_resource type="Texture2D" uid="uid://4nqwucu0fv5b" path="res://Assets/Buttons/Game_buttons/param_button_pressed.png" id="18_g0cuo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o6usu"]
bg_color = Color(0.596078, 0.760784, 0.643137, 0.858824)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5nufk"]
bg_color = Color(0.595353, 0.76048, 0.641322, 0.858824)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Theme" id="Theme_75vxk"]
Button/styles/disabled = SubResource("StyleBoxFlat_o6usu")
Button/styles/focus = SubResource("StyleBoxFlat_o6usu")
Button/styles/hover = SubResource("StyleBoxFlat_o6usu")
Button/styles/normal = SubResource("StyleBoxFlat_5nufk")
Button/styles/pressed = SubResource("StyleBoxFlat_o6usu")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cl7vy"]
bg_color = Color(0.596078, 0.760784, 0.643137, 0.858824)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.8, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0j1uf"]
bg_color = Color(0.596078, 0.760784, 0.643137, 0.858824)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.8, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5022k"]
bg_color = Color(0.596078, 0.760784, 0.643137, 0.858824)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.8, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Theme" id="Theme_q2mkg"]
Button/styles/disabled = SubResource("StyleBoxFlat_o6usu")
Button/styles/focus = SubResource("StyleBoxFlat_cl7vy")
Button/styles/hover = SubResource("StyleBoxFlat_0j1uf")
Button/styles/normal = SubResource("StyleBoxFlat_5022k")
Button/styles/pressed = SubResource("StyleBoxFlat_o6usu")

[sub_resource type="Theme" id="Theme_mwabh"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y1bmt")
metadata/_edit_horizontal_guides_ = [1063.0, 1220.0, 1050.0, 1249.0, 786.0, 53.0, 133.0, 1007.0, 799.0, 900.0]
metadata/_edit_vertical_guides_ = [50.0, 670.0, 360.0, 207.0]

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6paq5")

[node name="Level" type="Label" parent="."]
layout_mode = 0
offset_left = 280.0
offset_top = 140.0
offset_right = 441.0
offset_bottom = 223.0
theme_override_colors/font_color = Color(0.32549, 0.819608, 0.278431, 1)
theme_override_fonts/font = ExtResource("8_jx51j")
theme_override_font_sizes/font_size = 30
text = "Level 1"
horizontal_alignment = 1

[node name="ProgressBar" parent="." instance=ExtResource("4_bhfxs")]
layout_mode = 0
offset_left = 50.0
offset_top = 187.0
offset_right = 670.0
offset_bottom = 214.0

[node name="VBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 50.0
offset_top = 1145.0
offset_right = 468.0
offset_bottom = 1249.0
theme_override_constants/separation = 25

[node name="Delete" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("6_7oot7")
texture_normal = ExtResource("6_0o4qm")
texture_pressed = ExtResource("7_ls11b")
texture_disabled = ExtResource("7_ls11b")

[node name="Reroll" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("6_7oot7")
texture_normal = ExtResource("8_v2frp")
texture_pressed = ExtResource("9_7k8pm")
texture_disabled = ExtResource("9_7k8pm")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 112.0
offset_right = 42.0
offset_bottom = 152.0

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/Label"]
layout_mode = 2
offset_left = 564.0
offset_top = 1033.0
offset_right = 668.0
offset_bottom = 1137.0

[node name="Rotate" type="TextureButton" parent="VBoxContainer2/Label/MarginContainer"]
layout_mode = 2
theme = ExtResource("6_7oot7")
texture_normal = ExtResource("10_n3470")
texture_pressed = ExtResource("11_ccbw1")

[node name="GridContainer" type="GridContainer" parent="."]
clip_contents = true
layout_mode = 1
offset_left = 50.0
offset_top = 245.0
offset_right = 670.0
offset_bottom = 865.0
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 10

[node name="GameOver" parent="." instance=ExtResource("5_b0imn")]
visible = false
layout_mode = 0
offset_left = 246.0
offset_top = 432.0
offset_right = 477.0
offset_bottom = 575.0

[node name="PreviewZone" type="Control" parent="."]
anchors_preset = 0
offset_left = 50.0
offset_top = 881.0
offset_right = 90.0
offset_bottom = 921.0

[node name="PreviewContainer" type="Button" parent="PreviewZone"]
layout_mode = 0
offset_right = 424.0
offset_bottom = 208.0
theme = SubResource("Theme_75vxk")

[node name="PreviewNextPiece" type="Button" parent="PreviewZone"]
layout_mode = 0
offset_left = 431.0
offset_top = -2.0
offset_right = 620.0
offset_bottom = 208.0
theme = SubResource("Theme_q2mkg")

[node name="Preview" type="TextureRect" parent="PreviewZone"]
layout_mode = 2
offset_left = 524.0
offset_top = 100.0
offset_right = 524.0
offset_bottom = 100.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(0, 1)

[node name="Preview2" type="TextureRect" parent="PreviewZone"]
layout_mode = 2
offset_left = 310.0
offset_top = 101.0
offset_right = 310.0
offset_bottom = 101.0
scale = Vector2(0.5, 0.5)

[node name="Preview3" type="TextureRect" parent="PreviewZone"]
layout_mode = 2
offset_left = 112.0
offset_top = 101.0
offset_right = 112.0
offset_bottom = 101.0
scale = Vector2(0.5, 0.5)

[node name="AmountOfDelete" type="Label" parent="."]
layout_mode = 0
offset_left = 85.0
offset_top = 1249.0
offset_right = 113.0
offset_bottom = 1287.0
theme = SubResource("Theme_mwabh")
theme_override_colors/font_color = Color(0.32549, 0.819608, 0.278431, 1)
theme_override_fonts/font = ExtResource("8_jx51j")
theme_override_font_sizes/font_size = 30
text = "x2"

[node name="AmountOfReroll" type="Label" parent="."]
layout_mode = 0
offset_left = 214.0
offset_top = 1249.0
offset_right = 242.0
offset_bottom = 1287.0
theme = SubResource("Theme_mwabh")
theme_override_colors/font_color = Color(0.32549, 0.819608, 0.278431, 1)
theme_override_fonts/font = ExtResource("8_jx51j")
theme_override_font_sizes/font_size = 30
text = "x2"

[node name="HeadApp" type="Control" parent="."]
anchors_preset = 0
offset_left = 289.0
offset_top = 50.0
offset_right = 329.0
offset_bottom = 90.0

[node name="Score" type="Label" parent="HeadApp"]
layout_mode = 0
offset_left = -9.0
offset_right = 152.0
offset_bottom = 83.0
theme_override_colors/font_color = Color(0.32549, 0.819608, 0.278431, 1)
theme_override_fonts/font = ExtResource("8_jx51j")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1

[node name="Menu" type="TextureButton" parent="HeadApp"]
layout_mode = 0
offset_left = -239.0
offset_top = 3.0
offset_right = -176.0
offset_bottom = 66.0
theme = ExtResource("6_7oot7")
texture_normal = ExtResource("10_kqrni")
texture_pressed = ExtResource("11_gem6p")

[node name="HelpButton" type="TextureButton" parent="HeadApp"]
layout_mode = 0
offset_left = -145.0
offset_top = 3.0
offset_right = -82.0
offset_bottom = 66.0
theme = ExtResource("6_7oot7")
texture_normal = ExtResource("12_3kwa6")
texture_pressed = ExtResource("13_orq1o")

[node name="ParamButton" type="TextureButton" parent="HeadApp"]
layout_mode = 0
offset_left = 318.0
offset_top = 3.0
offset_right = 381.0
offset_bottom = 66.0
theme = ExtResource("6_7oot7")
texture_normal = ExtResource("17_lt0mf")
texture_pressed = ExtResource("18_g0cuo")

[node name="Help" parent="." instance=ExtResource("6_1bbwq")]
visible = false

[node name="Options" parent="." instance=ExtResource("13_ykqh5")]
visible = false
offset_left = 396.0
offset_top = 133.0
offset_right = 396.0
offset_bottom = 133.0

[connection signal="pressed" from="VBoxContainer/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="VBoxContainer/Reroll" to="." method="_on_change_piece_pressed"]
[connection signal="pressed" from="VBoxContainer2/Label/MarginContainer/Rotate" to="." method="_on_rotate_pressed"]
[connection signal="Menu_Pressed" from="GameOver" to="." method="_on_menu_pressed"]
[connection signal="Restart_Pressed" from="GameOver" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="HeadApp/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="HeadApp/HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="HeadApp/ParamButton" to="." method="_on_param_button_pressed"]
[connection signal="Quit_Pressed" from="Help" to="." method="_on_help_quit_pressed"]
